# WSI_Tiling

./: CMakeLists.txt  FileIOFunctions.h  ITKDeclarations.h  ITKFunctions.h  README.md  RGBChannelExtraction.h  ReadTiffWSI2.py  TileGeneration.cpp  UtilityFunctions.h  bidmc_desktop  bidmc_desktop.pub
itkFiles/: ColorChannelExtraction.h  itkLevelSetBasedCellSegmentation.h  itkLevelSetBasedCellSegmentation.txx
itkFiles_Inc/: ColorChannelExtraction.cpp  ColorChannelExtraction.h  RGBChannelExtraction.cpp  RGBChannelExtraction.h
